syntax="proto3";
package xk_protobuf_data;
enum ProtoCommand
{
	PROTO_NONE=0;
	PROTO_CHAT=1100;
	PROTO_REGISTERACCOUNT=1101;
	PROTO_LOGIN=1102;
	PROTO_SELECTSERVER=1103;
	PROTO_CREATEROLE=1104;
	PROTO_SELECTROLE=1105;

	PROTO_PUSH_CHATINFO=5001;
	PROTO_PUSH_PLAYERINFO=5002;	
}
